UI improvements: Add app description, fix title alignment, style search form and icon

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.cdnfonts.com/css/segoe-ui-4");
+* {
+  font-family: ;
+}
+
 body {
   margin-top: 10px;
   padding: 0;
@@ -9,7 +14,6 @@ body {
   flex-wrap: wrap;
   gap: 20px;
   padding: 20px;
-  font-family: "poppins", sans-serif;
   justify-content: center;
 }
 
@@ -84,41 +88,6 @@ body {
   padding: 10px 15px;
 }
 
-.button-22 {
-  align-items: center;
-  appearance: button;
-  background-color: #0276ff;
-  border-radius: 8px;
-  border-style: none;
-  box-shadow: rgba(255, 255, 255, 0.26) 0 1px 2px inset;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: flex;
-  flex-direction: row;
-  flex-shrink: 0;
-  font-family: "Inter", "Segoe UI", "Roboto", Arial, sans-serif;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
-  padding: 10px 21px;
-  text-align: center;
-  text-transform: none;
-  transition: color 0.13s ease-in-out, background 0.13s ease-in-out,
-    opacity 0.13s ease-in-out, box-shadow 0.13s ease-in-out;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button-22:active {
-  background-color: #006ae8;
-}
-
-.button-22:hover {
-  background-color: #1c84ff;
-}
-
 .addForm {
   display: flex;
   flex-direction: column;
@@ -133,7 +102,7 @@ body {
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  font-family: inherit;
+
   font-size: 14px;
   box-sizing: border-box;
 }
@@ -173,4 +142,66 @@ body {
 
 .deleteBtn:hover {
   background-color: #dd0000;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100px;
+  background-color: #2b2d42;
+}
+
+.home {
+  color: #faf9f6;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: "Segoe UI";
+}
+
+.home:hover {
+  text-decoration: underline;
+}
+
+.search-icon {
+  margin: 0px;
+  padding: 0px;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.formBox {
+  display: flex;
+  align-items: center;
+  gap: 0;
+}
+
+.formBox form {
+  display: flex;
+  align-items: center;
+  gap: 0;
+}
+
+.formBox input {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  width: 250px;
+  height: 24px;
+  box-sizing: border-box;
+}
+
+.formBox button {
+  padding: 10px 12px;
+  border: none;
+  border-radius: 0 4px 4px 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  background: transparent;
+  border: none;
 }
